--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -2,16 +2,17 @@
 <div class="container about-content section-center">
     <div class="row">
         <div class="col-12 order-1">
-            <h2 class="text-center section-head my-5">About Me</h2>
+            <h2 class="text-center section-head my-5">About me</h2>
         </div>
         <div class="col-12 order-3 order-md-2">
             <span class="d-md-none">Technical skills:</span>
             <div class="container technical-skills mt-2"></div>
         </div>
         <div class="col-12 col-md-8 mx-auto mt-3 about-me order-2 order-md-3">
-            <p>I am a full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
-            <p>This inspiration led to my first encounter with HTML & CSS. I have since then endeavoured to learn more. So far, I have worked with a number of technologies to better my development.</p>
-            <p>Currently, I am undergoing a diploma at <a target="_blank" rel="noopener" href="https://codeinstitute.net/de/" class="underline-hover-effect">Code Institute</a> where i specialize in building e-commerce websites and using relevant technologies to effeciently process and present data. I continually develop applications and learn new technologies with the aim to improve my skills and to provide solutions to organizational challenges.</p>
+            <p>I am a skilled and motivated full-stack software developer with a passion for leveraging technology to solve real-world challenges. My curiosity about how technology can address the issues we face in today's world led me to explore HTML & CSS, and I have since gained expertise in building websites from design to deployment using various technologies.</p>
+            <p>My recent completion of a Diploma at <a target="_blank" rel="noopener" href="https://codeinstitute.net/de/" class="underline-hover-effect">Code Institute</a>, specializing in e-commerce website development and data processing and presentation using relevant technologies, demonstrates my dedication to expanding my knowledge and skill set which has equiped me to develop applications and contribute to team success in hackathons.</p>
+            <p>Currently, I am learning data analytics through data Preprocessing, Modelling and Evaluation with Python.</p>
+            <p>My passion for learning new technologies and providing solutions to organizational challenges makes me a valuable asset to any team. My impressive skills in software development, combined with my drive and initiative, position me as an accomplished and highly capable full-stack software developer. My commitment to staying up-to-date with the latest industry trends and my eagerness to tackle new challenges ensure that I can make significant contributions to any Organization.</p>
             <span class="d-none d-md-block mb-3">Find out more about me</span>
             <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="{% static 'images/resume.pdf' %}">Résumé<i class="fa-solid fa-download ps-1"></i></a>
         </div>
