--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="my-5">
-                <a href="https://folarin-ogungbemi.herokuapp.com/blog/" target="_blank" class="action-btn btn-hero">Visit my Blog</a>
+                <a href="#projects" class="action-btn btn-hero">My Projects</a>
             </div>
             <div class="hero-social-links d-none d-md-block"></div>
         </div>
