--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -14,7 +14,7 @@
             <p>Currently, I am learning data analytics through data Preprocessing, Modelling and Evaluation with Python.</p>
             <p>My passion for learning new technologies and providing solutions to organizational challenges makes me a valuable asset to any team. My impressive skills in software development, combined with my drive and initiative, position me as an accomplished and highly capable full-stack software developer. My commitment to staying up-to-date with the latest industry trends and my eagerness to tackle new challenges ensure that I can make significant contributions to any Organization.</p>
             <span class="d-none d-md-block mb-3">Find out more about me</span>
-            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="{% static 'images/resume.pdf' %}">Résumé<i class="fa-solid fa-download ps-1"></i></a>
+            <a class="nav-link action-btn d-none d-md-block" target="_blank" rel="noopener" href="https://www.linkedin.com/in/folarin-ogungbemi/">LinkedIn</a>
         </div>
     </div>
 </div>
