--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
 
     {% block icon %}
-    <link rel="icon" type="image/png" href="{% static 'images/favicon.ico' %}">
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dzdyzl4r5/image/upload/v1687758191/favicon_ilvmxw.svg">
     {% endblock %}
 
     {% block core_css %}
@@ -50,7 +50,7 @@
     <!--Top Navigation-->
     <header class="container-fluid page-load">
         <nav id="top-nav" class="row py-3 mx-1">
-            <div class="col-6 d-flex">
+            <div class="col-8 d-flex">
                 <a href="{% url 'home' %}" class="text-decoration-none logo">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" zoomAndPan="magnify" viewBox="0 0 375 374.999991" height="40" preserveAspectRatio="xMidYMid meet" version="1.0">
                         <defs><g/></defs>
@@ -72,7 +72,7 @@
                     <span><i class="fa-solid fa-sun px-2"></i>Light mode</span>
                 </button>
             </div>
-            <div class="col-6 top-nav-list"></div>
+            <div class="col-4 top-nav-list"></div>
         </nav>
     </header>
 
